# bongonet

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  clippy.toml
.cargo/: audit.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  docs.yml  publish.yml  semgrep.yml
bongonet/: Cargo.toml
bongonet-boringssl/: Cargo.toml
bongonet-boringssl/src/: boring_tokio.rs  ext.rs  lib.rs
bongonet-cache/: Cargo.toml
bongonet-cache/benches/: lru_memory.rs  lru_serde.rs  simple_lru_memory.rs
bongonet-cache/src/: cache_control.rs  filters.rs  hashtable.rs  key.rs  lib.rs  lock.rs  max_file_size.rs  memory.rs  meta.rs  predictor.rs  put.rs  storage.rs  trace.rs
bongonet-cache/src/eviction/: lru.rs  mod.rs  simple_lru.rs
bongonet-core/: Cargo.toml
bongonet-core/src/: lib.rs
bongonet-core/src/apps/: http_app.rs  mod.rs  prometheus_http_app.rs
bongonet-core/src/connectors/: l4.rs  mod.rs  offload.rs  tls.rs
bongonet-core/src/connectors/http/: mod.rs  v1.rs  v2.rs
bongonet-core/src/connectors/tls/: mod.rs
bongonet-core/src/connectors/tls/boringssl_openssl/: mod.rs
bongonet-core/src/connectors/tls/rustls/: mod.rs
bongonet-core/src/listeners/: l4.rs  mod.rs  tls.rs
bongonet-core/src/listeners/tls/: mod.rs
bongonet-core/src/listeners/tls/boringssl_openssl/: mod.rs
bongonet-core/src/listeners/tls/rustls/: mod.rs
bongonet-core/src/modules/: mod.rs
bongonet-core/src/modules/http/: compression.rs  grpc_web.rs  mod.rs
bongonet-core/src/protocols/: digest.rs  mod.rs  raw_connect.rs  windows.rs
bongonet-core/src/protocols/http/: body_buffer.rs  client.rs  conditional_filter.rs  date.rs  error_resp.rs  mod.rs  server.rs
bongonet-core/src/protocols/http/bridge/: grpc_web.rs  mod.rs
bongonet-core/src/protocols/http/compression/: brotli.rs  gzip.rs  mod.rs  zstd.rs
bongonet-core/src/protocols/http/v1/: body.rs  client.rs  common.rs  mod.rs  server.rs
bongonet-core/src/protocols/http/v2/: client.rs  mod.rs  server.rs
bongonet-core/src/protocols/l4/: ext.rs  listener.rs  mod.rs  socket.rs  stream.rs
bongonet-core/src/protocols/ssl/: client.rs  digest.rs  mod.rs  server.rs
bongonet-core/src/protocols/tls/: digest.rs  mod.rs
bongonet-core/src/protocols/tls/boringssl_openssl/: client.rs  mod.rs  server.rs  stream.rs
bongonet-core/src/protocols/tls/dummy_tls/: mod.rs
bongonet-core/src/protocols/tls/noop_tls/: mod.rs
bongonet-core/src/protocols/tls/rustls/: client.rs  mod.rs  server.rs  stream.rs
bongonet-core/src/server/: daemon.rs  mod.rs
bongonet-core/src/server/configuration/: mod.rs
bongonet-core/src/server/transfer_fd/: mod.rs
bongonet-core/src/services/: background.rs  listening.rs  mod.rs
bongonet-core/src/tls/: mod.rs
bongonet-core/src/upstreams/: mod.rs  peer.rs
bongonet-core/src/utils/: mod.rs
bongonet-core/src/utils/tls/: boringssl_openssl.rs  mod.rs  rustls.rs
bongonet-core/tests/: nginx.conf  test_basic.rs
bongonet-core/tests/utils/: mod.rs
bongonet-error/: Cargo.toml
bongonet-error/src/: immut_str.rs  lib.rs
bongonet-header-serde/: Cargo.toml
bongonet-header-serde/src/: dict.rs  lib.rs  thread_zstd.rs  trainer.rs
bongonet-http/: Cargo.toml
bongonet-http/src/: case_header_name.rs  lib.rs
bongonet-ketama/: Cargo.toml
bongonet-ketama/benches/: memory.rs  simple.rs
bongonet-ketama/examples/: health_aware_selector.rs
bongonet-ketama/src/: lib.rs
bongonet-limits/: Cargo.toml
bongonet-limits/benches/: benchmark.rs
bongonet-limits/src/: estimator.rs  inflight.rs  lib.rs  rate.rs
bongonet-load-balancing/: Cargo.toml
bongonet-load-balancing/src/: background.rs  discovery.rs  health_check.rs  lib.rs
bongonet-load-balancing/src/selection/: algorithms.rs  consistent.rs  mod.rs  weighted.rs
bongonet-lru/: Cargo.toml
bongonet-lru/benches/: bench_linked_list.rs  bench_lru.rs
bongonet-lru/src/: lib.rs  linked_list.rs
bongonet-memory-cache/: Cargo.toml
bongonet-memory-cache/src/: lib.rs  read_through.rs
bongonet-openssl/: Cargo.toml
bongonet-openssl/src/: ext.rs  lib.rs
bongonet-pool/: Cargo.toml
bongonet-pool/src/: connection.rs  lib.rs  lru.rs
bongonet-proxy/: Cargo.toml
bongonet-proxy/examples/: backoff_retry.rs  ctx.rs  gateway.rs  grpc_web_module.rs  load_balancer.rs  modify_response.rs  multi_lb.rs  rate_limiter.rs  use_module.rs
bongonet-proxy/src/: lib.rs  proxy_cache.rs  proxy_h1.rs  proxy_h2.rs  proxy_purge.rs  proxy_trait.rs  subrequest.rs
bongonet-proxy/tests/: test_basic.rs  test_upstream.rs
bongonet-proxy/tests/utils/: cert.rs  mock_origin.rs  mod.rs  server_utils.rs
bongonet-proxy/tests/utils/conf/keys/: README.md
bongonet-proxy/tests/utils/conf/origin/conf/: nginx.conf
bongonet-runtime/: Cargo.toml
bongonet-runtime/benches/: hello.rs
bongonet-runtime/src/: lib.rs
bongonet-rustls/: Cargo.toml
bongonet-rustls/src/: lib.rs
bongonet-timeout/: Cargo.toml
bongonet-timeout/benches/: benchmark.rs
bongonet-timeout/src/: fast_timeout.rs  lib.rs  timer.rs
bongonet/examples/: client.rs  server.rs
bongonet/examples/app/: echo.rs  mod.rs  proxy.rs
bongonet/examples/service/: echo.rs  mod.rs  proxy.rs
bongonet/src/: lib.rs
docs/: README.md  quick_start.md
docs/user_guide/: conf.md  ctx.md  daemon.md  error_log.md  errors.md  failover.md  graceful.md  index.md  internals.md  modify_filter.md  panic.md  phase.md  phase_chart.md  pooling.md  prom.md  rate_limiter.md  start_stop.md  systemd.md
tinyufo/: Cargo.toml
tinyufo/benches/: bench_hit_ratio.rs  bench_memory.rs  bench_perf.rs
tinyufo/src/: buckets.rs  estimation.rs  lib.rs
