[package]
name = "bongonet-boringssl"
version = "0.4.0"
authors = ["Md Sulaiman <dev.sulaiman@icloud.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/khulnasoft/bongonet"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "tls", "ssl", "bongonet"]
description = """
BoringSSL async APIs for Bongonet.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bongonet_boringssl"
path = "src/lib.rs"

[dependencies]
boring = { version = "4.5", features = ["pq-experimental"] }
boring-sys = "4.5"
futures-util = { version = "0.3", default-features = false }
tokio = { workspace = true, features = ["io-util", "net", "macros", "rt-multi-thread"] }
libc = "0.2.70"
foreign-types-shared = { version = "0.3" }


[dev-dependencies]
tokio-test = "0.4"
tokio = { workspace = true, features = ["full"] }

[features]
default = []
pq_use_second_keyshare = []
# waiting for boring-rs release
read_uninit = []
