[package]
name = "bongonet-cache"
version = "0.3.0"
authors = ["Yuchen Wu <yuchen@khulnasoft.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/khulnasoft/bongonet"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "http", "cache"]
description = """
HTTP caching APIs for Bongonet proxy.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bongonet_cache"
path = "src/lib.rs"

[dependencies]
bongonet-core = { version = "0.3.0", path = "../bongonet-core", default-features = false }
bongonet-error = { version = "0.3.0", path = "../bongonet-error" }
bongonet-header-serde = { version = "0.3.0", path = "../bongonet-header-serde" }
bongonet-http = { version = "0.3.0", path = "../bongonet-http" }
bongonet-lru = { version = "0.3.0", path = "../bongonet-lru" }
bongonet-timeout = { version = "0.3.0", path = "../bongonet-timeout" }
http = { workspace = true }
indexmap = "1"
once_cell = { workspace = true }
regex = "1"
blake2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1"
bytes = { workspace = true }
httpdate = "1.0.2"
log = { workspace = true }
async-trait = { workspace = true }
parking_lot = "0.12"
rustracing = "0.5.1"
rustracing_jaeger = "0.7"
rmp = "0.8"
tokio = { workspace = true }
lru = { workspace = true }
ahash = { workspace = true }
hex = "0.4"
httparse = { workspace = true }
strum = { version = "0.26", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
tokio = { workspace = true, features = ["fs"] }
env_logger = "0.9"
dhat = "0"
futures = "0.3"

[[bench]]
name = "simple_lru_memory"
harness = false

[[bench]]
name = "lru_memory"
harness = false

[[bench]]
name = "lru_serde"
harness = false

[features]
default = ["openssl"]
openssl = ["bongonet-core/openssl"]
boringssl = ["bongonet-core/boringssl"]
