[package]
name = "bongonet-http"
version = "0.3.0"
authors = ["KhulnaSoft DevOps <info@khulnasoft.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/khulnasoft/bongonet"
categories = ["web-programming"]
keywords = ["http", "bongonet"]
description = """
HTTP request and response header types for Bongonet.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bongonet_http"
path = "src/lib.rs"

[dependencies]
http = { workspace = true }
bytes = { workspace = true }
bongonet-error = { version = "0.3.0", path = "../bongonet-error" }

[features]
default = []
patched_http1 = []
