[package]
name = "bongonet-limits"
version = "0.3.0"
authors = ["Yuchen Wu <yuchen@khulnasoft.com>"]
license = "Apache-2.0"
description = "A library for rate limiting and event frequency estimation"
edition = "2021"
repository = "https://github.com/khulnasoft/bongonet"
categories = ["algorithms"]
keywords = ["rate-limit", "bongonet"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bongonet_limits"
path = "src/lib.rs"

[dependencies]
ahash = { workspace = true }

[dev-dependencies]
rand = "0"
dashmap = "5"
dhat = "0"

[[bench]]
name = "benchmark"
harness = false

[features]
dhat-heap = [] # for benchmark only
