[package]
name = "bongonet-limits"
version = "0.4.0"
authors = ["Md Sulaiman <dev.sulaiman@icloud.com>"]
license = "Apache-2.0"
description = "A library for rate limiting and event frequency estimation"
edition = "2021"
repository = "https://github.com/khulnasoft/bongonet"
categories = ["algorithms"]
keywords = ["rate-limit", "bongonet"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bongonet_limits"
path = "src/lib.rs"

[dependencies]
ahash = { workspace = true }

[dev-dependencies]
rand = "0.8"
dashmap = "5"
dhat = "0"
float-cmp = "0.9.0"

[[bench]]
name = "benchmark"
harness = false

[features]
dhat-heap = [] # for benchmark only
