[package]
name = "bongonet-lru"
version = "0.3.0"
authors = ["Yuchen Wu <yuchen@khulnasoft.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/khulnasoft/bongonet"
categories = ["algorithms", "caching"]
keywords = ["lru", "cache", "bongonet"]
description = """
LRU cache that focuses on memory efficiency, concurrency and persistence.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bongonet_lru"
path = "src/lib.rs"

[dependencies]
hashbrown = "0"
parking_lot = "0"
arrayvec = "0"
rand = "0"

[dev-dependencies]
lru = { workspace = true }

[[bench]]
name = "bench_linked_list"
harness = false

[[bench]]
name = "bench_lru"
harness = false
