[package]
name = "bongonet-rustls"
version = "0.4.0"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/khulnasoft/bongonet"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "tls", "ssl", "bongonet"]
description = """
RusTLS async APIs for Bongonet.
"""

[lib]
name = "bongonet_rustls"
path = "src/lib.rs"

[dependencies]
log = "0.4.21"
bongonet-error = {version = "0.4.0", path = "../bongonet-error"}
ring = "0.17.8"
rustls = "0.23.12"
rustls-native-certs = "0.7.1"
rustls-pemfile = "2.1.2"
rustls-pki-types = "1.7.0"
tokio-rustls = "0.26.0"
no_debug = "3.1.0"
