[package]
name = "bongonet"
version = "0.4.0"
authors = ["Md Sulaiman <dev.sulaiman@icloud.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/khulnasoft/bongonet"
description = """
A framework to build fast, reliable and programmable networked systems at Internet scale.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["async", "proxy", "http", "bongonet"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bongonet"
path = "src/lib.rs"

[package.metadata.docs.rs]
features = ["document-features"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bongonet-core = { version = "0.4.0", path = "../bongonet-core", default-features = false }
bongonet-http = { version = "0.4.0", path = "../bongonet-http" }
bongonet-timeout = { version = "0.4.0", path = "../bongonet-timeout" }
bongonet-load-balancing = { version = "0.4.0", path = "../bongonet-load-balancing", optional = true, default-features = false }
bongonet-proxy = { version = "0.4.0", path = "../bongonet-proxy", optional = true, default-features = false }
bongonet-cache = { version = "0.4.0", path = "../bongonet-cache", optional = true, default-features = false }

# Only used for documenting features, but doesn't work in any other dependency 
# group :(
document-features = { version = "0.2.10", optional = true }

[dev-dependencies]
clap = { version = "3.2.25", features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
env_logger = "0.9"
reqwest = { version = "0.11", features = ["rustls"], default-features = false }
hyper = "0.14"
async-trait = { workspace = true }
http = { workspace = true }
log = { workspace = true }
prometheus = "0.13"
once_cell = { workspace = true }
bytes = { workspace = true }
regex = "1"

[target.'cfg(unix)'.dev-dependencies]
hyperlocal = "0.8"
jemallocator = "0.5"

[features]
default = []

#! ### Tls
#! Tls is provided by adding one of these features. If no tls-providing feature
#! is added, only unencrypted http. Only one tls-providing feature can be
#! selected at a time

## Use [OpenSSL](https://crates.io/crates/openssl) for tls 
##
## Requires native openssl libraries and build tooling
openssl = [
    "bongonet-core/openssl",
    "bongonet-proxy?/openssl",
    "bongonet-cache?/openssl",
    "bongonet-load-balancing?/openssl",
    "openssl_derived",
]

## Use [BoringSSL](https://crates.io/crates/boring) for tls 
##
## Requires native boring libraries and build tooling
boringssl = [
    "bongonet-core/boringssl",
    "bongonet-proxy?/boringssl",
    "bongonet-cache?/boringssl",
    "bongonet-load-balancing?/boringssl",
    "openssl_derived",
]

## Use  [rustls](https://crates.io/crates/rustls) for tls
##
## ⚠️ _Highly Experimental_! ⚠️ Try it, but don't rely on it (yet)
rustls = [
    "bongonet-core/rustls",
    "bongonet-proxy?/rustls",
    "bongonet-cache?/rustls",
    "bongonet-load-balancing?/rustls",
    "any_tls",
]

#! ### Bongonet extensions

## Include the [proxy](crate::proxy) module
##
## This feature will include and export `bongonet_proxy::prelude::*`
proxy = ["bongonet-proxy"]

## Include the [lb](crate::lb) (load-balancing) module
##
## This feature will include and export `bongonet_load_balancing::prelude::*`
lb = ["bongonet-load-balancing", "proxy"]

## Include the [cache](crate::cache) module
##
## This feature will include and export `bongonet_cache::prelude::*`
cache = ["bongonet-cache"]

## Enable time/scheduling functionality
time = []

## Enable sentry for error notifications
sentry = ["bongonet-core/sentry"]

# These features are intentionally not documented
openssl_derived = ["any_tls"]
any_tls = []
patched_http1 = ["bongonet-core/patched_http1"]
document-features = ["dep:document-features", "proxy", "lb", "cache", "time", "sentry"]
